add ads to downloads page

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Dragon Ball Z Little Fighter 2</title>
   </head>
   <body>
