--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9061009934750007"
      crossorigin="anonymous"></script>
+     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     <title>Dragon Ball Z Little Fighter 2</title>
   </head>
   <body>
