--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
      crossorigin="anonymous"></script>
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     <meta name="title" content="Dragon Ball Z Little Fighter 2 - Best 2D DBZ Fan Game!" />
-    <meta name="description" content="Fan made Dragon Ball Z mod of the game Little Fighter 2. Made by bashscrazy, Excellent Approximation and darkfiren" />
+    <meta name="description" content="Best 2D Fan made Dragon Ball Z game mod of the game Little Fighter 2. Made by bashscrazy, Excellent Approximation and darkfiren" />
     <meta name="image" content="/src/images/dbzlf2-logo.png" />
   </head>
   <body>
